# coffee_shop

./: README.md  alembic.ini  database.py  docker-compose.yml  endpoints.py  main.py  pyproject.toml  schemas.py
alembic/versions/: 47fc5c47acfa_change_batches_table.py  65b472f10586_remove_quantity_from_ingredients.py
app/: config.py  main.py
app/database/: database.py
app/routers/: batches.py  ingredients.py  input_ingredients.py  orders.py  output_ingredients.py  products.py
app/schemas/: batch.py  core.py  ingredient.py  input_ingredients.py  order.py  output_ingredient.py  product.py
scripts/: sample_data.sql
test/: test_main.py
