[tool.poetry]
name = "coffee-shop"
version = "0.1.0"
description = ""
authors = ["caiomorozini <caiomorozini@outlook.com.br>"]
readme = "README.md"
packages = [{include = "app", from = "."}]

[tool.poetry.dependencies]
python = "3.11"
fastapi = "^0.103.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
python-multipart = "^0.0.6"
databases = "^0.8.0"
psycopg2-binary = "^2.9.8"
asyncpg = "^0.28.0"
alembic = "^1.12.0"
unidecode = "^1.3.7"
icecream = "^2.1.3"
httpx = "^0.25.0"
pydantic-settings = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
